--- a/app/styles/Field/PlayerField.css
+++ b/app/styles/Field/PlayerField.css
@@ -2,7 +2,7 @@
   height: 449px;
   background-color: steelblue;
 	display: flex;
-  min-width: 1000px;
+  /* min-width: 1000px; */
   position: relative;
 }
 
@@ -11,6 +11,7 @@
   position: absolute;
   top: 0px;
   height: 449px;
-  background-color: red;
+  /* background-color: red; */
+	background: white url("https://gadgetflowcdn.com/wp-content/themes/thegadgetflow4/images/categories/random_large/all_things_wood.jpg");
   margin-bottom: 0px;
 }
